core/CobraParser.py
# Generated from Cobra.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CobraParser ( Parser ):

    grammarFileName = "Cobra.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'read_file'", "';'", "'write_file'", 
                     "'coil'", "'fang'", "'slitherplot'", "'TrainSnaketron'", 
                     "'strike'", "'MakeNest'", "'in'", "'trail'", "'hiss'", 
                     "'bite'", "'from'", "'scales'", "'yay'", "'nay'", "'spit'", 
                     "'snake'", "'snakent'", "'['", "']'", "'{'", "'('", 
                     "')'", "'}'", "'.'", "','", "':'", "'^'", "'-'", "'!'", 
                     "'*'", "'/'", "'%'", "'+'", "'>'", "'<'", "'>='", "'<='", 
                     "'=='", "'!='", "'and'", "'or'", "'='", "'elstrike'", 
                     "'else'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "COIL", "FANG", "SLITHERPLOT", "TRAINSNAKETRON", "STRIKE", 
                      "MAKENEST", "IN", "TRAIL", "HISS", "BITE", "FROM", 
                      "SCALES", "YAY", "NAY", "SPIT", "SNAKE", "SNAKENT", 
                      "LBRACKET", "RBRACKET", "LBRACE", "LPAREN", "RPAREN", 
                      "RBRACE", "POINT", "COMMA", "COLON", "POW", "MINUS", 
                      "NOT", "MULT", "DIV", "MOD", "PLUS", "GT", "LT", "GTEQ", 
                      "LTEQ", "EQ", "NEQ", "AND", "OR", "ASSIGN", "ELSTRIKE", 
                      "ELSE", "ID", "INT", "FLOAT", "STRING", "NEWLINE", 
                      "WS" ]

    RULE_parse = 0
    RULE_from_input = 1
    RULE_from_file = 2
    RULE_stat = 3
    RULE_compound_stat = 4
    RULE_simple_stat = 5
    RULE_expr = 6
    RULE_atom = 7
    RULE_scales = 8
    RULE_snake = 9
    RULE_grabScale = 10
    RULE_keyvalue = 11
    RULE_variable = 12
    RULE_spit = 13
    RULE_bite = 14
    RULE_hiss = 15
    RULE_statement = 16
    RULE_assignment = 17
    RULE_controlStructure = 18
    RULE_ifStatement = 19
    RULE_forLoop = 20
    RULE_dataPlotting = 21
    RULE_whileLoop = 22
    RULE_functionDeclaration = 23
    RULE_condition_block = 24
    RULE_parameter = 25
    RULE_mlTraining = 26
    RULE_snaketronTraining = 27
    RULE_stat_block = 28
    RULE_makeNest = 29
    RULE_fileHandling = 30

    ruleNames =  [ "parse", "from_input", "from_file", "stat", "compound_stat", 
                   "simple_stat", "expr", "atom", "scales", "snake", "grabScale", 
                   "keyvalue", "variable", "spit", "bite", "hiss", "statement", 
                   "assignment", "controlStructure", "ifStatement", "forLoop", 
                   "dataPlotting", "whileLoop", "functionDeclaration", "condition_block", 
                   "parameter", "mlTraining", "snaketronTraining", "stat_block", 
                   "makeNest", "fileHandling" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    COIL=4
    FANG=5
    SLITHERPLOT=6
    TRAINSNAKETRON=7
    STRIKE=8
    MAKENEST=9
    IN=10
    TRAIL=11
    HISS=12
    BITE=13
    FROM=14
    SCALES=15
    YAY=16
    NAY=17
    SPIT=18
    SNAKE=19
    SNAKENT=20
    LBRACKET=21
    RBRACKET=22
    LBRACE=23
    LPAREN=24
    RPAREN=25
    RBRACE=26
    POINT=27
    COMMA=28
    COLON=29
    POW=30
    MINUS=31
    NOT=32
    MULT=33
    DIV=34
    MOD=35
    PLUS=36
    GT=37
    LT=38
    GTEQ=39
    LTEQ=40
    EQ=41
    NEQ=42
    AND=43
    OR=44
    ASSIGN=45
    ELSTRIKE=46
    ELSE=47
    ID=48
    INT=49
    FLOAT=50
    STRING=51
    NEWLINE=52
    WS=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def from_input(self):
            return self.getTypedRuleContext(CobraParser.From_inputContext,0)


        def from_file(self):
            return self.getTypedRuleContext(CobraParser.From_fileContext,0)


        def getRuleIndex(self):
            return CobraParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = CobraParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.from_input()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.from_file()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class From_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self):
            return self.getTypedRuleContext(CobraParser.StatContext,0)


        def NEWLINE(self):
            return self.getToken(CobraParser.NEWLINE, 0)

        def getRuleIndex(self):
            return CobraParser.RULE_from_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrom_input" ):
                listener.enterFrom_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrom_input" ):
                listener.exitFrom_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFrom_input" ):
                return visitor.visitFrom_input(self)
            else:
                return visitor.visitChildren(self)




    def from_input(self):

        localctx = CobraParser.From_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_from_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.stat()
            self.state = 67
            self.match(CobraParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class From_fileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CobraParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.StatContext)
            else:
                return self.getTypedRuleContext(CobraParser.StatContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CobraParser.NEWLINE)
            else:
                return self.getToken(CobraParser.NEWLINE, i)

        def getRuleIndex(self):
            return CobraParser.RULE_from_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrom_file" ):
                listener.enterFrom_file(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrom_file" ):
                listener.exitFrom_file(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFrom_file" ):
                return visitor.visitFrom_file(self)
            else:
                return visitor.visitChildren(self)




    def from_file(self):

        localctx = CobraParser.From_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_from_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8725724290055162) != 0):
                self.state = 71
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 14, 16, 17, 18, 20, 21, 23, 48, 49, 50, 51]:
                    self.state = 69
                    self.stat()
                    pass
                elif token in [52]:
                    self.state = 70
                    self.match(CobraParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(CobraParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stat(self):
            return self.getTypedRuleContext(CobraParser.Simple_statContext,0)


        def compound_stat(self):
            return self.getTypedRuleContext(CobraParser.Compound_statContext,0)


        def getRuleIndex(self):
            return CobraParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = CobraParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stat)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12, 13, 14, 16, 17, 18, 20, 21, 23, 48, 49, 50, 51]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.simple_stat()
                pass
            elif token in [1, 3, 4, 5, 6, 7, 8, 9, 11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.compound_stat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStatement(self):
            return self.getTypedRuleContext(CobraParser.IfStatementContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(CobraParser.WhileLoopContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(CobraParser.ForLoopContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(CobraParser.FunctionDeclarationContext,0)


        def snaketronTraining(self):
            return self.getTypedRuleContext(CobraParser.SnaketronTrainingContext,0)


        def makeNest(self):
            return self.getTypedRuleContext(CobraParser.MakeNestContext,0)


        def fileHandling(self):
            return self.getTypedRuleContext(CobraParser.FileHandlingContext,0)


        def dataPlotting(self):
            return self.getTypedRuleContext(CobraParser.DataPlottingContext,0)


        def getRuleIndex(self):
            return CobraParser.RULE_compound_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stat" ):
                listener.enterCompound_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stat" ):
                listener.exitCompound_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_stat" ):
                return visitor.visitCompound_stat(self)
            else:
                return visitor.visitChildren(self)




    def compound_stat(self):

        localctx = CobraParser.Compound_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compound_stat)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.ifStatement()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.whileLoop()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.forLoop()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.functionDeclaration()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.snaketronTraining()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 6)
                self.state = 87
                self.makeNest()
                pass
            elif token in [1, 3]:
                self.enterOuterAlt(localctx, 7)
                self.state = 88
                self.fileHandling()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 8)
                self.state = 89
                self.dataPlotting()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(CobraParser.AssignmentContext,0)


        def hiss(self):
            return self.getTypedRuleContext(CobraParser.HissContext,0)


        def bite(self):
            return self.getTypedRuleContext(CobraParser.BiteContext,0)


        def spit(self):
            return self.getTypedRuleContext(CobraParser.SpitContext,0)


        def atom(self):
            return self.getTypedRuleContext(CobraParser.AtomContext,0)


        def NEWLINE(self):
            return self.getToken(CobraParser.NEWLINE, 0)

        def getRuleIndex(self):
            return CobraParser.RULE_simple_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stat" ):
                listener.enterSimple_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stat" ):
                listener.exitSimple_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stat" ):
                return visitor.visitSimple_stat(self)
            else:
                return visitor.visitChildren(self)




    def simple_stat(self):

        localctx = CobraParser.Simple_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_simple_stat)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.hiss()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.bite()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 95
                self.spit()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 96
                self.atom()
                self.state = 97
                self.match(CobraParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CobraParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NotExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CobraParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(CobraParser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(CobraParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExpr" ):
                listener.enterNotExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExpr" ):
                listener.exitNotExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExpr" ):
                return visitor.visitNotExpr(self)
            else:
                return visitor.visitChildren(self)


    class AddSubExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CobraParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.ExprContext)
            else:
                return self.getTypedRuleContext(CobraParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(CobraParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(CobraParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSubExpr" ):
                listener.enterAddSubExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSubExpr" ):
                listener.exitAddSubExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSubExpr" ):
                return visitor.visitAddSubExpr(self)
            else:
                return visitor.visitChildren(self)


    class UnaryMinusExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CobraParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUS(self):
            return self.getToken(CobraParser.MINUS, 0)
        def expr(self):
            return self.getTypedRuleContext(CobraParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryMinusExpr" ):
                listener.enterUnaryMinusExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryMinusExpr" ):
                listener.exitUnaryMinusExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryMinusExpr" ):
                return visitor.visitUnaryMinusExpr(self)
            else:
                return visitor.visitChildren(self)


    class AtomExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CobraParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(CobraParser.AtomContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomExpr" ):
                listener.enterAtomExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomExpr" ):
                listener.exitAtomExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomExpr" ):
                return visitor.visitAtomExpr(self)
            else:
                return visitor.visitChildren(self)


    class OrExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CobraParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.ExprContext)
            else:
                return self.getTypedRuleContext(CobraParser.ExprContext,i)

        def OR(self):
            return self.getToken(CobraParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)


    class MultDivModExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CobraParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.ExprContext)
            else:
                return self.getTypedRuleContext(CobraParser.ExprContext,i)

        def MULT(self):
            return self.getToken(CobraParser.MULT, 0)
        def DIV(self):
            return self.getToken(CobraParser.DIV, 0)
        def MOD(self):
            return self.getToken(CobraParser.MOD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultDivModExpr" ):
                listener.enterMultDivModExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultDivModExpr" ):
                listener.exitMultDivModExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultDivModExpr" ):
                return visitor.visitMultDivModExpr(self)
            else:
                return visitor.visitChildren(self)


    class PowExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CobraParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def POW(self):
            return self.getToken(CobraParser.POW, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.ExprContext)
            else:
                return self.getTypedRuleContext(CobraParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPowExpr" ):
                listener.enterPowExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPowExpr" ):
                listener.exitPowExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPowExpr" ):
                return visitor.visitPowExpr(self)
            else:
                return visitor.visitChildren(self)


    class RelationalExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CobraParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.ExprContext)
            else:
                return self.getTypedRuleContext(CobraParser.ExprContext,i)

        def LTEQ(self):
            return self.getToken(CobraParser.LTEQ, 0)
        def GTEQ(self):
            return self.getToken(CobraParser.GTEQ, 0)
        def LT(self):
            return self.getToken(CobraParser.LT, 0)
        def GT(self):
            return self.getToken(CobraParser.GT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationalExpr" ):
                listener.enterRelationalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationalExpr" ):
                listener.exitRelationalExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationalExpr" ):
                return visitor.visitRelationalExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParenExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CobraParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(CobraParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(CobraParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(CobraParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenExpr" ):
                return visitor.visitParenExpr(self)
            else:
                return visitor.visitChildren(self)


    class EqualityExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CobraParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.ExprContext)
            else:
                return self.getTypedRuleContext(CobraParser.ExprContext,i)

        def EQ(self):
            return self.getToken(CobraParser.EQ, 0)
        def NEQ(self):
            return self.getToken(CobraParser.NEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqualityExpr" ):
                listener.enterEqualityExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqualityExpr" ):
                listener.exitEqualityExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualityExpr" ):
                return visitor.visitEqualityExpr(self)
            else:
                return visitor.visitChildren(self)


    class AndExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CobraParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.ExprContext)
            else:
                return self.getTypedRuleContext(CobraParser.ExprContext,i)

        def AND(self):
            return self.getToken(CobraParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CobraParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                localctx = CobraParser.UnaryMinusExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
